--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css">
-   
-
+   <link rel="shortcut icon" href="/assets/Property 1=Black.svg" type="image/x-icon">
 </head>
 <body>
    
