--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
    <link rel="shortcut icon" href="/assets/Property 1=Black.svg" type="image/x-icon">
 </head>
 <body>
@@ -31,6 +32,11 @@
               <li><a href="#">Become a sponsor</a></li>
               <li><a href="#">Become a mentor/Coach</a></li>
             </ul>
+          </div>
+          <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
           </div>
         </div>
       </header>
@@ -428,6 +434,7 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="/js/script.js"></script>
+    <script src="js/responsive.js"></script>
   
   </body>
 </html>
